src/shared-components/aboutUsCard/aboutUsCard.css
/* variables */
/* variables end */
/* mixins */
/* rem unit mixin */
/* flex Sass mixin */
/* mixins end */
.about-us-box {
  background-color: #575353;
  padding: 0.5rem 1rem; }
  @media (min-width: 992px) {
    .about-us-box {
      height: 13.75rem;
      padding: 0.5rem 2rem; } }
  .about-us-box h6,
  .about-us-box p {
    color: #fff; }
  .about-us-box h6 {
    font-size: 1.3125rem;
    line-height: 2.3125rem; }
  .about-us-box p {
    font-size: 1rem;
    line-height: 1.375rem; }
    @media (min-width: 992px) {
      .about-us-box p {
        font-size: 0.75rem;
        line-height: 1.125rem; } }
  @media (min-width: 992px) {
    .about-us-box .btn.link-btn {
      font-size: 0.625rem;
      line-height: 0.6875rem; } }

